variables.RunHalf.scala.error
Compilation error:
RunHalf:1: error: not found: value x
x=0
^RunHalf:2: error: not found: value orange
orange=0
^RunHalf:3: error: not found: value x
while(2*x!=orange+1){
        ^RunHalf:3: error: not found: value orange
while(2*x!=orange+1){
           ^RunHalf:5: error: not found: value orange
  if(isOverOrange()==true){orange+=1;}
                           ^RunHalf:6: error: not found: value x
  if(isOverBaggle()==true){x+=1;}
                           ^